--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/ghigbie/angularJS-practice/issues"
   },
-  "homepage": "https://github.com/ghigbie/angularJS-practice#readme"
+  "homepage": "https://github.com/ghigbie/angularJS-practice#readme",
+  "dependencies": {
+    "express": "^4.15.3",
+    "node": "0.0.0"
+  }
 }
